<resources>
    <string name="app_name">RickAndMorty2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Procurar personagem</string>
    <string name="title_character">Personagens</string>
    <string name="title_reset">Reset</string>
    <string name="title_filter">Filter</string>
    <string name="txt_alive">alive</string>
    <string name="txt_dead">Dead</string>
    <string name="txt_unknowm">Unknowm</string>
    <string name="title_gender">Gender</string>
    <string name="title_btn_apply">Apply</string>
    <string name="txt_famale">Famale</string>
    <string name="txt_male">Male</string>
    <string name="txt_genderless">Genderless</string>
    <string name="txt_unknown">Unknown</string>
    <string name="txt_error">%1$d - Character not find</string>

    <!-- DetailFragment Strings -->
    <string name="title_episodes">Episodes:</string>
    <string name="title_origin">Origin</string>
    <string name="title_location">Location</string>
</resources>