<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_ligth"
    android:orientation="vertical"
    tools:context=".presentation.filterFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_filter"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_title_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            tools:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_alive"
                style="@style/ChipStyle"
                android:text="@string/txt_alive"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dead"
                style="@style/ChipStyle"
                android:text="@string/txt_dead"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_unknowm"
                style="@style/ChipStyle"
                android:text="@string/txt_unknowm"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_gender"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkbox_female"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="0dp"
                android:background="@drawable/radiobutton_female_selector"
                android:text="@string/txt_famale"/>

            <RadioButton
                android:id="@+id/checkbox_male"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radiobutton_male_selector"
                android:text="@string/txt_male"/>

            <RadioButton
                android:id="@+id/checkbox_genderless"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radiobutton_genderless_selector"
                android:text="@string/txt_genderless"/>

            <RadioButton
                android:id="@+id/checkbox_unknown"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radiobutton_unknown"
                android:text="@string/txt_unknown"/>

        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_make_filter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_button"
        android:text="@string/title_btn_apply"
        android:textColor="@color/black"
        app:backgroundTint="@null" />

</LinearLayout>