<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_ligth"
    tools:context=".presentation.ui.fragment.DetailFragment">





    <ImageView
        android:id="@+id/img_character"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/imgrick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:textSize="24sp"
        android:layout_marginStart="34dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_character"
        tools:text="Alive" />

    <TextView
        android:id="@+id/txt_id_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_status"
        app:layout_constraintBottom_toTopOf="@id/txt_specie"
        app:layout_constraintVertical_bias="0.064"
        tools:text="1" />

    <TextView
        android:id="@+id/txt_name"
        style="@style/TextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:maxLines="2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Rick Sanchez" />

    <TextView
        android:id="@+id/txt_specie"
        style="@style/TextColor"
        android:layout_width="0dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_status"
        tools:text="HUMAN" />

    <TextView
        android:id="@+id/txt_gender"
        style="@style/TextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_specie"
        app:layout_constraintVertical_bias="0.13"
        tools:text="Genderless" />

    <TextView
        android:id="@+id/txt_episodes"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/title_episodes"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/txt_n_episodes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_gender" />

    <TextView
        android:id="@+id/txt_n_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/txt_episodes"
        app:layout_constraintTop_toTopOf="@+id/txt_episodes"
        tools:text="42" />


    <TextView
        android:id="@+id/txt_titulo_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_origin"
        style="@style/TextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_episodes" />

    <TextView
        android:id="@+id/txt_origin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:maxLines="1"
        style="@style/TextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/txt_titulo_origin"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_origin"
        tools:text="Earth" />

    <TextView
        android:id="@+id/txt_titulo_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_location"
        style="@style/TextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_origin"
        app:layout_constraintTop_toBottomOf="@+id/txt_origin" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:maxLines="1"
        style="@style/TextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/txt_titulo_location"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_location"
        tools:text="Citadel of Ricks" />

</androidx.constraintlayout.widget.ConstraintLayout>